testing/macro-tests/tests/ui/pk_fields_empty.stderr
error: pk(fields = []) must contain at least one field
  --> tests/ui/pk_fields_empty.rs:20:5
   |
20 |     pk(fields = []),
   |     ^^
